# CrossPlatformCreator

./: README.md  createProject.py
cmake/: config.cmake
config/: CMakeLists.txt  conanfile.txt
config/buildtool/: conan.cmake
config/sdk/cocoa/: CMakeLists.txt  Info.plist
config/sdk/cocoa/demo/: main.mm
config/sdk/cocoa/src/: $$projectName$$Objc.h  $$projectName$$Objc.mm
config/sdk/src/: CMakeLists.txt
config/sdk/src/jni/: JNI$$projectName$$SDK.cc  JNI$$projectName$$SDK.h  JNIConverter.h
document/: 坑.md  跨平台工程构建.md
